grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $._declaration,
        $.comment,
        $._newline,
        $.class_header,
      ),

    _terminator: ($) => choice($._newline, ":"),

    attribute_statement: ($) =>
      seq(
        kw("Attribute"),
        field("name", $.dotted_name),
        "=",
        field("value", $._expression),
        $._terminator,
      ),

    dotted_name: ($) =>
      prec.left(seq($.identifier, repeat(seq(".", $.identifier)))),

    option_statement: ($) =>
      seq(
        kw("Option"),
        choice(kw("Explicit"), kw("Base"), kw("Compare"), kw("Private")),
        optional(choice($.identifier, $.integer_literal)),
        $._terminator,
      ),

    // ── Procedure declarations ─────────────────────────────────────
    sub_declaration: ($) =>
      seq(
        optional($.access_modifier),
        optional(kw("Static")),
        kw("Sub"),
        field("name", $.identifier),
        optional($.parameter_list),
        $._terminator,
        optional($.body),
        kw("End"),
        kw("Sub"),
        $._terminator,
      ),

    function_declaration: ($) =>
      seq(
        optional($.access_modifier),
        optional(kw("Static")),
        kw("Function"),
        field("name", $.identifier),
        optional($.parameter_list),
        optional($.as_clause),
        $._terminator,
        optional($.body),
        kw("End"),
        kw("Function"),
        $._terminator,
      ),

    parameter_list: ($) => seq("(", commaSep($.parameter), ")"),

    parameter: ($) =>
      seq(
        optional(choice(kw("Optional"), kw("ParamArray"))),
        optional(choice(kw("ByVal"), kw("ByRef"))),
        field("name", $.identifier),
        optional(seq("(", ")")), // array parameter
        optional($.as_clause),
        optional(seq("=", field("default", $._expression))),
      ),

    as_clause: ($) =>
      seq(kw("As"), optional(kw("New")), field("type", $.type_expression)),

    type_expression: ($) => choice($.builtin_type, $.dotted_name),

    builtin_type: ($) =>
      choice(
        kw("Boolean"),
        kw("Byte"),
        kw("Integer"),
        kw("Long"),
        kw("LongLong"),
        kw("LongPtr"),
        kw("Single"),
        kw("Double"),
        kw("Currency"),
        kw("Decimal"),
        kw("Date"),
        kw("String"),
        kw("Variant"),
        kw("Object"),
      ),

    access_modifier: ($) =>
      choice(kw("Public"), kw("Private"), kw("Friend")),

    // ── Body (sequence of statements) ──────────────────────────────
    body: ($) => repeat1($._statement_with_comment),

    _statement_with_comment: ($) =>
      choice(
        $._statement,
        $.comment,
        $._newline,
      ),

    // ── Statements ─────────────────────────────────────────────────
    variable_declaration: ($) =>
      seq(
        choice(kw("Dim"), kw("Static")),
        commaSep1($.variable_declarator),
        $._terminator,
      ),

    variable_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", optional($._expression), ")")),
        optional($.as_clause),
      ),

    const_declaration: ($) =>
      seq(
        optional($.access_modifier),
        kw("Const"),
        commaSep1($.const_declarator),
        $._terminator,
      ),

    const_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional($.as_clause),
        "=",
        field("value", $._expression),
      ),

    // In VBA, assignment and call look the same until you see "=" or not.
    // foo.bar(x) could be a call; foo.bar(x) = y is assignment.
    // We unify them here and let highlights.scm sort it out.
    assignment_statement: ($) =>
      seq(
        optional(kw("Let")),
        field("left", $._lvalue),
        "=",
        field("right", $._expression),
        $._terminator,
      ),

    set_statement: ($) =>
      seq(
        kw("Set"),
        field("left", $._lvalue),
        "=",
        field("right", $._expression),
        $._terminator,
      ),

    _lvalue: ($) =>
      choice(
        $.identifier,
        $.member_access_expression,
        $.index_expression,
      ),

    call_statement: ($) =>
      choice(
        // "Call foo(args)" with explicit Call keyword
        seq(
          kw("Call"),
          field("target", $._expression),
          $._terminator,
        ),
        // Bare call with no-parens args: MsgBox "hello", vbInfo
        seq(
          field("target", choice($.identifier, $.member_access_expression)),
          $.argument_list,
          $._terminator,
        ),
        // Bare call with no args (expression as statement): Auto_Open
        seq(
          field("target", choice($.identifier, $.member_access_expression, $.index_expression)),
          $._terminator,
        ),
      ),

    argument_list: ($) =>
      // No-parens arguments: MsgBox "hello", vbInfo
      commaSep1($._argument),

    _argument: ($) =>
      choice(
        // Named argument: param:=value
        seq($.identifier, ":=", $._expression),
        $._expression,
      ),

    // ── Control flow ───────────────────────────────────────────────
    if_statement: ($) =>
      // Block If
      seq(
        kw("If"),
        field("condition", $._expression),
        kw("Then"),
        $._terminator,
        optional($.body),
        repeat($.elseif_clause),
        optional($.else_clause),
        kw("End"),
        kw("If"),
        $._terminator,
      ),

    elseif_clause: ($) =>
      seq(
        kw("ElseIf"),
        field("condition", $._expression),
        kw("Then"),
        $._terminator,
        optional($.body),
      ),

    else_clause: ($) =>
      seq(kw("Else"), $._terminator, optional($.body)),

    for_statement: ($) =>
      seq(
        kw("For"),
        field("variable", $.identifier),
        "=",
        field("start", $._expression),
        kw("To"),
        field("end", $._expression),
        optional(seq(kw("Step"), field("step", $._expression))),
        $._terminator,
        optional($.body),
        kw("Next"),
        optional($.identifier),
        $._terminator,
      ),

    for_each_statement: ($) =>
      seq(
        kw("For"),
        kw("Each"),
        field("variable", $.identifier),
        kw("In"),
        field("collection", $._expression),
        $._terminator,
        optional($.body),
        kw("Next"),
        optional($.identifier),
        $._terminator,
      ),

    on_error_statement: ($) =>
      seq(
        kw("On"),
        kw("Error"),
        choice(
          seq(kw("GoTo"), choice($.identifier, "0", seq("-", "1"))),
          seq(kw("Resume"), kw("Next")),
        ),
        $._terminator,
      ),

    exit_statement: ($) =>
      seq(
        kw("Exit"),
        choice(
          kw("Sub"),
          kw("Function"),
          kw("Property"),
          kw("For"),
          kw("Do"),
        ),
        $._terminator,
      ),

    label: ($) => prec(1, seq($.identifier, ":")),

    // ── Other statements ───────────────────────────────────────────
    _expression: ($) =>
      choice(
        $.literal,
        $.identifier,
        $.member_access_expression,
        $.index_expression,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $.new_expression,
        $.typeof_expression,
      ),

    unary_expression: ($) =>
      prec.right(
        9,
        choice(
          seq("-", $._expression),
          seq(kw("Not"), $._expression),
          seq(kw("AddressOf"), $._expression),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [8, "^"],
        [7, choice("*", "/")],
        [6, "\\"],
        [5, kw("Mod")],
        [4, choice("+", "-")],
        [3, "&"],
        [
          2,
          choice("=", "<>", "<", ">", "<=", ">=", kw("Is"), kw("Like")),
        ],
        [1, choice(kw("And"), kw("Or"), kw("Xor"), kw("Eqv"), kw("Imp"))],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    member_access_expression: ($) =>
      prec.left(
        11,
        seq(
          optional(field("object", $._expression)),
          ".",
          field("member", $.identifier),
        ),
      ),

    literal: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.boolean_literal,
        $.nothing_literal,
        $.date_literal,
      ),

    integer_literal: ($) =>
      token(
        choice(
          /[0-9]+[&%^]?/,
          /&[hH][0-9a-fA-F]+&?/,
          /&[oO][0-7]+&?/,
        ),
      ),

    float_literal: ($) =>
      token(/[0-9]*\.[0-9]+([eE][+-]?[0-9]+)?[!#@]?/),

    string_literal: ($) =>
      token(seq('"', repeat(choice(/[^"\r\n]/, '""')), '"')),

    boolean_literal: ($) => choice(kw("True"), kw("False")),

    nothing_literal: ($) => kw("Nothing"),

    identifier: ($) => /[A-Za-z_][A-Za-z0-9_]*[%&!#$@]?/,
  },
});
